Step 22.19: Fix an issue with overflow of body

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -21,6 +21,14 @@ body {
   font-family: 'Muli', sans-serif;
 }
 
+body.mobile {
+  overflow: hidden;
+}
+
+body.web {
+  overflow: visible;
+}
+
 .sebm-google-map-container {
   width: 450px;
   height: 450px;
